# OpenLumina

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  OpenLumina.sln  README.md  build.sh  build_linux.sh  build_mac.sh  build_win.cmd  build_win_90.cmd  build_win_90b2.cmd  build_win_90b3.cmd  ida-plugin.json
.github/workflows/: build.yml
OpenLumina/: OpenLumina.cpp  OpenLumina.h  OpenLumina.vcxproj  OpenLumina.vcxproj.filters  PropertySheet.props  dllmain.cpp  framework.h  pch.h  plugin_ctx.h
OpenLumina/plthook/: plthook_osx.c  plthook_win32.c
cmake/: FindIdaSdk.cmake
lumina_ca/: README.md  commands.cmd  commands.sh  openssl_intermediate.cnf  openssl_lumina.cnf  openssl_root.cnf  readme.md  readme.txt
